[project]
name = "unittestplus"
version = "0.1.6"
description = "Lightweight testing utility for Python functions with profiling and logging."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
  { name = "Sam Lewis", email = "samlewis1999.sl@gmail.com" }
]

dependencies = [
  "pandas",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/VarSamLewis/unittestplus"
Repository = "https://github.com/VarSamLewis/unittestplus"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["unittestplus"]
package-dir = {"" = "src"}


