[project]
name = "unittestplus"
version = "0.1.9"
description = "Lightweight testing utility for Python functions with profiling and logging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Sam Lewis", email = "samlewis1999.sl@gmail.com" }
]

dependencies = [
  "pandas",
  "numpy",
  "black",
  "mypy",
  "ruff"
]

[project.urls]
Homepage = "https://github.com/VarSamLewis/unittestplus"
Repository = "https://github.com/VarSamLewis/unittestplus"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["unittestplus"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py37"
lint.select = ["E", "F", "I"]